--- a/index.html
+++ b/index.html
@@ -36,15 +36,13 @@
 					<div id="main">
 
 						<!-- Introduction -->
-							<section id="intro" class="main">
+							<section id="about" class="main">
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>Who am I?</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>I'm a math guy who is looking for a job, I guess.</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
@@ -54,9 +52,9 @@
 							</section>
 
 						<!-- First Section -->
-							<section id="first" class="main special">
+							<section id="background" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Where have I been?</h2>
 								</header>
 								<ul class="features">
 									<li>
