Lots of changes, not quite there yet but got rid of all of the latin and it all links properly.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Eric Rozon's Website</title>
+		<title>EricRozon</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,8 +19,11 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+                        <!--   <span class="logo"><img src="images/sb_logo_black.png" alt="" /></span>  -->
 						<h1>Eric Rozon</h1>
+
+                        <p> In the end, this will be a site about me. For now, it is a site about me which is under construction.
+                        So if you happen to stumble across this thing, don't judge too harshly!</p>
 					</header>
 
 				<!-- Nav -->
@@ -42,77 +45,60 @@
 										<header class="major">
 											<h2>Who am I?</h2>
 										</header>
-										<p>I'm a math guy who is looking for a job, I guess.</p>
+										<p>I apply math to try and make sense of the world by striking a good balance between 
+                                        concreteness and abstraction. My current academic interests include behavioural economics and
+                                        <a href = "https://en.wikipedia.org/wiki/Hyperbolic_discounting">discounting</a>, game theory,
+                                        <a href = "https://kantorovich.org">optimal transport</a> and its applications,
+                                        and computers and modelling. 
+                                        </p>
+                                        <p>
+                                        Having spent the past seven years dedicated to courses, research, and government work,
+                                        I am now looking to apply my diverse set of skills and experiences 
+                                        to help tackle problems outside of academia. My interests are varied, and I am not
+                                        restricting my job search to any one field or industry. Most important to me is the
+                                        opportunity to collaborate with others on challenging problems. 
+                                        </p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li><a href="philosophy.html" class="button">Philosophy</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/chalk.jpg" alt="" /></span>
 								</div>
 							</section>
 
 						<!-- First Section -->
 							<section id="background" class="main special">
 								<header class="major">
-									<h2>Where have I been?</h2>
+									<h2>What do I get up to?</h2>
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
-									</li>
-								</ul>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
+										<span class="icon solid major style1 fa-university"></span>
+										<h3>Education</h3>
+										<p>From St. Catharines to Ottawa to Vancouver, I have been in school for
+                                        almost my entire life. I include a brief roadmap of where exactly I have been,
+                                        what I have done there, and what I have learned.</p>
 
-						<!-- Second Section -->
-							<section id="second" class="main special">
-								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
-								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
 									</li>
-									<li class="style2">
-										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
+									<li>
+										<span class="icon solid major style3 fa-briefcase"></span>
+										<h3>Professional Experiences</h3>
+										<p>I have been careful to maintain touch with the professional world. While always
+                                        devoted to my formal education, I have taken every opportunity to broaden my horizons and
+                                        learn through practical experience.</p>
 									</li>
-									<li class="style3">
-										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Tempus
-									</li>
-									<li class="style4">
-										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
-									</li>
-									<li class="style5">
-										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
+									<li>
+										<span class="icon solid major style5 fa-running"></span>
+										<h3>Personal Interests</h3>
+										<p>My academic and professional resume paints an accurate but incomplete picture of myself.
+                                        In the spirit of providing a wholistic sense of what makes me tick, 
+                                        I here include some details about how I occupy my time when I'm not at work or school.
+                                        </p>
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="background.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -120,14 +106,13 @@
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Classical Resume</h2>
+									<p>A one size fits all CV is generally a bad idea. With that in mind, here is
+                                    my generic resume. </p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="cv.pdf" class="button primary">My CV</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -137,31 +122,25 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<h2>Don't be a stranger</h2>
+							<p>You should feel free to reach out to me for any reason. I am always eager to learn about
+                            exciting projects in industry or academia. Furthermore, I recognize that any success I achieve
+                            will be a direct result of others having generously helped me. As a result,
+                            I am always happy to participate in outreach activities. </p>
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Contact information</h2>
 							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
+								<dt>Location</dt>
+								<dd>Vancouver &bull; Canada</dd>
 								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
+								<dd>erozo + 041 + "at" + uOttawa + "dot" + ca</dd>
 							</dl>
-							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul>
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Eric Rozon, 2021. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
