Getting there now. I've added a section on projects, and fixed some other minor issues. I also have linked most places in the website to most others now... not sure to what extent I should link everything

--- a/philosophy.html
+++ b/philosophy.html
@@ -59,6 +59,7 @@ that salient features are immediately clear, and automate mundance processes to 
                                 </p>
 	                        <ul class="actions special">
                             <li><a href="index.html" class="button">Main</a></li>
+                            <li><a href="projects.html" class="button primary">Projects</a></li>
                             <li><a href="background.html" class="button">Background </a></li>
 
                         </ul>
