--- a/background.html
+++ b/background.html
@@ -110,8 +110,10 @@
                                 </p>
                                     <ul class="actions special">
                                         <li><a href="index.html" class="button">Main</a></li>
-                                        <li><a href="cv.pdf" class="button">My CV</a></li>
+                                        <li><a href="projects.html" class="button">Projects</a></li>
+
                                     </ul>
+
 
 							</section>
 
