--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<ul>
 							<li><a href="#about" class="active">About me</a></li>
 							<li><a href="#background">Background</a></li>
-							<li><a href="#projects">Projects</a></li>
+							<li><a href="#cv">Resume</a></li>
 						</ul>
 					</nav>
 
@@ -60,11 +60,15 @@
                                         </p>
 										<ul class="actions">
 											<li><a href="philosophy.html" class="button">Philosophy</a></li>
+											<li><a href="projects.html" class="button primary">Projects</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/chalk.jpg" alt="" /></span>
 								</div>
 							</section>
+
+
+
 
 						<!-- First Section -->
 							<section id="background" class="main special">
@@ -103,8 +107,13 @@
 								</footer>
 							</section>
 
+
+
+
+
+
 						<!-- Get Started -->
-							<section id="cta" class="main special">
+							<section id="cv" class="main special">
 								<header class="major">
 									<h2>Classical Resume</h2>
 									<p>A one size fits all CV is generally a bad idea. With that in mind, here is
