removed link to grad seminar talk - should check with others to see if they are ok with their voice/face appearing

--- a/projects.html
+++ b/projects.html
@@ -31,8 +31,8 @@
 							
                                 <h2>Theses</h2>
 								<p>
-                                In my master's, <a href="https://owncloud.math.ubc.ca/index.php/s/1TDobJPFQrrMVaP
-                                ">I am studying evolutionary discounting</a> (link to a seminar talk I gave on the subject). 
+                                In my master's, 
+                                I am studying evolutionary discounting.
                                 Briefly, human and non-human animals' observed
                                 preferences for consumption across different time horizons seem irrational,
                                 at least according to standard economic models of welfare optimization. However, there
