Started playing around with colours. Some minor changes made. Added favicon of chalk drawing

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+        <!--This is for the favicon -->
+
+
+
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
 	</head>
 	<body class="is-preload">
 
@@ -22,8 +36,7 @@
                         <!--   <span class="logo"><img src="images/sb_logo_black.png" alt="" /></span>  -->
 						<h1>Eric Rozon</h1>
 
-                        <p> In the end, this will be a site about me. For now, it is a site about me which is under construction.
-                        So if you happen to stumble across this thing, don't judge too harshly!</p>
+                        <h2> Applied math guy</h2>
 					</header>
 
 				<!-- Nav -->
@@ -45,18 +58,18 @@
 										<header class="major">
 											<h2>Who am I?</h2>
 										</header>
-										<p>I apply math to try and make sense of the world by striking a good balance between 
+										<p>I apply math to solve tangible problems by striking an appropriate balance between 
                                         concreteness and abstraction. My current academic interests include behavioural economics and
                                         <a href = "https://en.wikipedia.org/wiki/Hyperbolic_discounting">discounting</a>, game theory,
                                         <a href = "https://kantorovich.org">optimal transport</a> and its applications,
-                                        and computers and modelling. 
+                                        and modelling. 
                                         </p>
                                         <p>
-                                        Having spent the past seven years dedicated to courses, research, and government work,
+                                        Having spent the past seven years dedicated to courses, research, and student jobs,
                                         I am now looking to apply my diverse set of skills and experiences 
                                         to help tackle problems outside of academia. My interests are varied, and I am not
                                         restricting my job search to any one field or industry. Most important to me is the
-                                        opportunity to collaborate with others on challenging problems. 
+                                        opportunity to collaborate with others on challenging and fun problems. 
                                         </p>
 										<ul class="actions">
 											<li><a href="philosophy.html" class="button">Philosophy</a></li>
@@ -79,24 +92,23 @@
 									<li>
 										<span class="icon solid major style1 fa-university"></span>
 										<h3>Education</h3>
-										<p>From St. Catharines to Ottawa to Vancouver, I have been in school for
-                                        almost my entire life. I include a brief roadmap of where exactly I have been,
-                                        what I have done there, and what I have learned.</p>
+										<p>From my childhood in St. Catharines to a bachelor's in Ottawa and finally my
+                                        master's in Vancouver, I have been in school for
+                                        almost my entire life. </p>
 
 									</li>
 									<li>
 										<span class="icon solid major style3 fa-briefcase"></span>
 										<h3>Professional Experiences</h3>
-										<p>I have been careful to maintain touch with the professional world. While always
-                                        devoted to my formal education, I have taken every opportunity to broaden my horizons and
-                                        learn through practical experience.</p>
+										<p>Despite my lifetime of professional studenthood, I have also regularly engaged
+                                        with the professional world through co-operative education and student jobs.
+                                        </p>
 									</li>
 									<li>
 										<span class="icon solid major style5 fa-running"></span>
 										<h3>Personal Interests</h3>
 										<p>My academic and professional resume paints an accurate but incomplete picture of myself.
-                                        In the spirit of providing a wholistic sense of what makes me tick, 
-                                        I here include some details about how I occupy my time when I'm not at work or school.
+                                        Between athletics and competitive hobbies, I like to keep myself busy outside of work. 
                                         </p>
 									</li>
 								</ul>
@@ -136,9 +148,6 @@
                             exciting projects in industry or academia. Furthermore, I recognize that any success I achieve
                             will be a direct result of others having generously helped me. As a result,
                             I am always happy to participate in outreach activities. </p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
 						</section>
 						<section>
 							<h2>Contact information</h2>
