--- a/philosophy.html
+++ b/philosophy.html
@@ -11,6 +11,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
 	</head>
 	<body class="is-preload">
 
@@ -29,36 +32,33 @@
 						<!-- Content -->
 							<section id="content" class="main">
 								<h2>On Math</h2>
-								<p>
-The greatest opportunities for advancement lay not in the questions to which we do not know the answers,
-but in the questions that have not yet been asked. The greatest strength of mathematics is its capacity to strip a complicated
-phenomenon to its fundamental components, or what we call abstraction. Otherwise put, mathematics and abstraction are the language and
-the tools with which we ask meaningful and empowering questions.
+                                <p>
+                                The greatest difficulty in addressing a new problem is figuring out the right questions to ask. 
+                                Mathematics is useful because it reduces complicated phenomena to their fundamental components, or what
+                                we call abstraction. For me, mathematics and abstraction are the language and the tools with which we
+                                ask meaningful, empowering questions.
                                 </p>
 								<h2>On Computers</h2>
 								<p>Adults check carefully before crossing the street because we have all at some point interacted
 with a belligerent driver. We remind children to look both ways before stepping into traffic not because they are stupid, but because
 they lack our experiences. Real world phenomena are rife with easy to make assumptions not
 borne out in practice. Facing a poorly understand phenomenon alone, we use our best judgement in much the same way
-a child wanders blindly into a busy street. Computers bridge a computational, rather than intellectual, gap.
+a child wanders blindly into a busy street. Computers bridge a <em>computational</em>, rather than intellectual, gap.
 Properly leveraged, modern computing power empowers us to play out scenarios via simulations, visualize complex data structures such
 that salient features are immediately clear, and automate mundance processes to focus human brains on what truly matters.
 </p>
 
 								<h2>On Understanding</h2>
-								<p>
-                                The optimal model of understanding is somewhere between the the concrete and the abstract. 
-                                Specific realizations of an unexplained phenomenon prompt the fundamental question: Why do we observe
-                                the world as it is? 
-                                <a href = "https://en.wikipedia.org/wiki/Abstract_nonsense">Pure</a> abstraction can be beautiful and
-                                worthwhile in its own right, but won't necessarily help us understand the fundamental nature of our problem.
-                                Concrete examples inform us of what has been. Abstraction tells us what could be. 
-                                To understand is to be able to explain why concrete realizations unfold as observed, so that not yet realized
-                                occurrences might be accurately predicted. 
-
+                                <p>
+                                Somwhere between the purely concrete and abstract is where I strive to work. Specificity and examples
+                                provide motivation and guide reseach and discovery. Whereas 
+                                <a href = "https://en.wikipedia.org/wiki/Abstract_nonsense">pure</a>
+                                abstraction can be fun and beautiful on its own, a moderate level of abstraction generalizes beyond
+                                what has been observed to what <em>may</em> be observed, allowing us to make confident, testable predictions
+                                about the as yet unobserved. 
                                 </p>
 	                        <ul class="actions special">
-                            <li><a href="index.html" class="button">Main</a></li>
+                            <li><a href="index.html#about" class="button">Main</a></li>
                             <li><a href="projects.html" class="button primary">Projects</a></li>
                             <li><a href="background.html" class="button">Background </a></li>
 
