--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
 	</head>
 	<body class="is-preload">
 
@@ -66,9 +69,10 @@
 
 
 
-                                <h2>Course projects</h2>
+                                <h2>Course and personal projects</h2>
                                 <p>
-                                Some courses, some projects.
+                                I have completed several projects as a result of my studies and personal interests. I include here a sampling
+                                of some completed projects. 
                                 </p>
 
                                 <ul>
@@ -89,13 +93,13 @@
                                             destroy the statistical significance of a hypothesis. I worked in a team of two to analyse alternative,
                                             so-called "robust" regression methods. 
                                         </li>
-                                        <li><b>Ontario High School Running:</b> In high school, my cross country/track coach at one point flippantly
+                                        <li><b>Ontario High School Running:</b> In high school, my cross country/track coach at one point casually 
                                             remarked that after harder winters, you observe slower races in the spring. I set out to test his
                                             hypothesis. I collected both weather data and athletic performance data for different regions in Ontario
                                             and ran some simple regressions to conclude that colder winters are associated with worse athletic
                                             performance in longer events (1500 meters and up). 
-                                            Unfortunatley, the data for this project was lost in a computer upgrade I have yet to 
-                                            recreate my findings. 
+                                            Unfortunately, the data for this project was lost in a computer upgrade I have yet to 
+                                            replicate my findings. 
                                         </li>
                                 </ul>
 
@@ -107,7 +111,7 @@
                                 
 
                                     <ul class="actions special">
-                                        <li><a href="index.html" class="button">Main</a></li>
+                                        <li><a href="index.html#about" class="button">Main</a></li>
                                         <li><a href="background.html" class="button">My Background</a></li>
 
                                     </ul>
