Changed some more colours

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 									<li>
 										<span class="icon solid major style1 fa-university"></span>
 										<h3>Education</h3>
-										<p>From my childhood in St. Catharines to a bachelor's in Ottawa and finally my
+										<p>From my childhood to my bachelor's in Ottawa and finally my
                                         master's in Vancouver, I have been in school for
                                         almost my entire life. </p>
 
@@ -100,7 +100,7 @@
 									<li>
 										<span class="icon solid major style3 fa-briefcase"></span>
 										<h3>Professional Experiences</h3>
-										<p>Despite my lifetime of professional studenthood, I have also regularly engaged
+										<p>In addition to my lifetime of studenthood, I have also regularly engaged
                                         with the professional world through co-operative education and student jobs.
                                         </p>
 									</li>
