Added felt background.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-                        <!--   <span class="logo"><img src="images/sb_logo_black.png" alt="" /></span>  -->
 						<h1>Eric Rozon</h1>
 
                         <h2> Applied math guy</h2>
@@ -133,7 +132,7 @@
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="cv.pdf" class="button primary">My CV</a></li>
+										<li><a href="erozon_cv.pdf" class="button primary">My CV</a></li>
 									</ul>
 								</footer>
 							</section>
