Fixed a typo in projects, under Ont. Running

--- a/projects.html
+++ b/projects.html
@@ -113,7 +113,7 @@
                                             hypothesis. I collected both weather data and athletic performance data for different regions in Ontario
                                             and ran some simple regressions to conclude that colder winters are associated with worse athletic
                                             performance in longer events (1500 meters and up). 
-                                            Unfortunately, the data for this project was lost in a computer upgrade I have yet to 
+                                            Unfortunately, the data for this project was lost in a computer upgrade and I have yet to 
                                             replicate my findings. 
                                         </li>
                                 </ul>
