Added statistical learning theory and ML to applied math stuff

--- a/background.html
+++ b/background.html
@@ -63,7 +63,8 @@
                                         </li>
                                         <li><b>Applied math and economics:</b> Micro and macroeconomic theory. Monetary theory and policy. 
                                         Optimal transport with applications in economics. Combinatorial, classical, and evolutionary
-                                        game theory. Quantum information theory, computing, and algorithms.</li>
+                                        game theory. Quantum information theory, computing, and algorithms. Statistical learning theory and
+                                        machine learning.</li>
                                 </ul>
 
                                 <h2>Work Experience</h2>
