brief update to my background, including Darktrace.

--- a/background.html
+++ b/background.html
@@ -47,10 +47,12 @@
 							
                                 <h2>Education</h2>
 								<p>
-                                I am currently a second year master's student in mathematics at the University of British Columbia,
-                                in Vancouver, Canada. Since September 2019, I have taken classes and researched <a href="https://erozon.github.io/projects.html">evolutionary discounting</a>
+                                I am currently employed as a Cyber Technologist (technical sales and client management) at Darktrace, helping clients to evaluate and leverage Darktrace's AI platform to prevent, detect, respond to and recover from cyber disruption. Prior to beginning this role in January 2022, 
+                                I was a  master's student in mathematics at the University of British Columbia,
+                                in Vancouver, Canada. My research focused on
+                                <a href="https://erozon.github.io/projects.html">evolutionary discounting</a>
                                 under the supervision of <a href="https://www.math.ubc.ca/~hauert">Christoph Hauert</a>.
-                                Before coming to UBC, I studied economics and mathematics at the University of Ottawa. The following list outlines
+                                Before UBC, I studied economics and mathematics at the University of Ottawa. The following list outlines
                                 my major courses and areas of study. 
                                 </p>
                                 <p> 
