--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<header id="header" class="alt">
 						<h1>Eric Rozon</h1>
 
-                        <h2> Applied math guy</h2>
+                        <h2> Welcome to my website. Have a look around. </h2>
 					</header>
 
 				<!-- Nav -->
