Updating to include a link to my thesis rather than a link to my github repo which is a mess

--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
 
 
                                 <ul>
-                                    <li><b>UBC:</b> <a href="https://github.com/erozon/SqurirelBanking/tree/master">Evolutionary discounting</a> (My Github repo for the project, which is still under construction.)
+                                    <li><b>UBC:</b> <a href="https://open.library.ubc.ca/media/stream/pdf/24/1.0406079/4">Evolutionary discounting</a> 
                                         </li>
                                         <li><b>uOttawa:</b> <a href = "https://mysite.science.uottawa.ca/mnevins/papers/EricRozonThesis.pdf">Quadratic forms over the <em>p</em>-adic numbers</a></li>
                                 </ul>
